# solVsEth

./: .gitignore  memeCoins.txt  pyproject.toml
src/: main.py
